--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
           <div class="room">
             <img src="resources/img/single-min.jpg" alt="single_bedroom" />
             <div>
-              <h3>Suite Room</h3>
-              <p class="price">$79 <span>/ night</span></p>
+              <h3>SUite Room</h3>
+              <p class="price">&#8377; 1000 <span>/ night</span></p>
             </div>
             <div>
               <a href="#"
@@ -172,7 +172,7 @@
             <img src="resources/img/duble-min.jpg" alt="double_bedroom" />
             <div>
               <h3>Family Room</h3>
-              <p class="price">$169 <span>/ night</span></p>
+              <p class="price">&#8377; 1500 <span>/ night</span></p>
             </div>
             <div>
               <a href="#"
@@ -189,7 +189,7 @@
             />
             <div>
               <h3>Delux Room</h3>
-              <p class="price">$225 <span>/ night</span></p>
+              <p class="price">&#8377; 1800 <span>/ night</span></p>
             </div>
             <div>
               <a href="#"
@@ -205,7 +205,7 @@
             <img src="resources/img/single2-min.jpg" alt="single_bedroom" />
             <div>
               <h3>Classic Room</h3>
-              <p class="price">$245 <span>/ night</span></p>
+              <p class="price">&#8377; 2000 <span>/ night</span></p>
             </div>
             <div>
               <a href="#"
@@ -219,7 +219,7 @@
             <img src="resources/img/double2-min-min.jpg" alt="double_bedroom" />
             <div>
               <h3>Superior Room</h3>
-              <p class="price">$299 <span>/ night</span></p>
+              <p class="price">&#8377; 2300 <span>/ night</span></p>
             </div>
             <div>
               <a href="#"
@@ -236,7 +236,7 @@
             />
             <div>
               <h3>Luxury Room</h3>
-              <p class="price">$325 <span>/ night</span></p>
+              <p class="price">&#8377; 3000 <span>/ night</span></p>
             </div>
             <div>
               <a href="#"
@@ -264,7 +264,7 @@
               ><img
                 src="resources/img/customer-1.jpg"
                 alt="Customer 1 photo"
-              />Alberto Duncan</cite
+              />Ravish Sharma</cite
             >
           </blockquote>
         </div>
@@ -277,7 +277,7 @@
               ><img
                 src="resources/img/customer-2.jpg"
                 alt="Customer 2 photo"
-              />Joana Silva</cite
+              />Manshi Tyagi</cite
             >
           </blockquote>
         </div>
@@ -292,7 +292,7 @@
               ><img
                 src="resources/img/customer-3.jpg"
                 alt="Customer 3 photo"
-              />Milton Chapman</cite
+              />Abdul Khan</cite
             >
           </blockquote>
         </div>
