--- a/bookings/bookingForm.html
+++ b/bookings/bookingForm.html
@@ -43,7 +43,7 @@
               <ul class="main-nav js--main-nav">
                 <li><a href="myBookings.html">My Bookings</a></li>
                 <li>
-                  <a id="home-signin-status" href="register/register.html"
+                  <a id="home-signin-status" href="../register/register.js"
                     >Sign In</a
                   >
                 </li>
@@ -150,21 +150,7 @@
                     </div>
                   </div>
 
-                  <!-- <div class="col span-1-of-3">
-                    <div class="row">
-                      <div class="col span-1-of-2">
-                        <label>Total Amount</label><br />
-                      </div>
-                      <div class="col span-1-of-2">
-                        <br />
-                        <input
-                          type="submit"
-                          style="margin-top: 0; padding: 3px"
-                          value="Book Now"
-                        />
-                      </div>
-                    </div>
-                  </div> -->
+                 
                 </div>
               </form>
               <div style="text-align: right">
@@ -175,26 +161,7 @@
                   onclick= "onNext()"
                 />
               </div>
-              <!-- <div class="summary">
-                <h3>Summary</h3>
-                <div class="row" style="margin-top: 10px">
-                  <div class="col span-1-of-3">Luxury Room</div>
-                  <div class="col span-1-of-3">2 Nights</div>
-                  <div class="col span-1-of-3">&#8377;200 / Night</div>
-                </div>
-                <div class="row">
-                  <div class="col span-1-of-2">
-                    Total Amount : <b>&#8377;400 </b>
-                  </div>
-                </div>
-                <div style="text-align: center">
-                  <input
-                    type="submit"
-                    style="margin-top: 8px; padding: 8px; font-size: 110%"
-                    value="Book Now"
-                  />
-                </div>
-              </div> -->
+              
             </div>
           </section>
           <section style="display: none;" class="section-form-summary" id="section-form-summary">
