--- a/bookings/myBookings.html
+++ b/bookings/myBookings.html
@@ -58,6 +58,9 @@
               <h2 class="js--wp-5">Your Bookings</h2>
             </div>
             <div class="row">
+              <h3 style="text-align: center; text-transform: none;" id="pls-sign-in">Please Sign-In too see your bookings</h3>
+            </div>
+            <div class="row">
               <table class="table">
                 <thead>
                   <tr>
@@ -95,31 +98,32 @@
 
     <script>
       path = "http://localhost:5000/";
+      if (localStorage.getItem("token")) {
+        document.getElementById("pls-sign-in").style.display = "none"
+        let bookings;
 
-      let bookings;
+        const update = () => {
+          axios
+            .get(path + "app/bookings", {
+              headers: {
+                token: localStorage.getItem("token"),
+              },
+            })
+            .then(function (response) {
+              console.log(response);
+              bookings = response.data.data;
+              console.log(bookings);
 
-      const update = () => {
-        axios
-          .get(path + "app/bookings", {
-            headers: {
-              token: localStorage.getItem("token"),
-            },
-          })
-          .then(function (response) {
-            console.log(response);
-            bookings = response.data.data;
-            console.log(bookings);
-
-            //Populate list
-            let tableBody = document.getElementById("tableBody");
-            let str = "";
-            const options = {
-              year: "numeric",
-              month: "numeric",
-              day: "numeric",
-            };
-            bookings.forEach((element, index) => {
-              str += `
+              //Populate list
+              let tableBody = document.getElementById("tableBody");
+              let str = "";
+              const options = {
+                year: "numeric",
+                month: "numeric",
+                day: "numeric",
+              };
+              bookings.forEach((element, index) => {
+                str += `
             <tr>
               <td>${element.name}</td>
               <td>${element.accommodation}</td>
@@ -136,33 +140,37 @@
               </td>
             </tr>
         `;
-            });
-            tableBody.innerHTML = str;
-          })
-          .catch(function (error) {
-            console.log(error);
-          });
-      };
-      update();
-      const onCancel = (index) => {
-        let choice = confirm("Are You sure you want to cancel the booking ?")
-        if(choice){
-          const bookingId = bookings[index].booking_id;
-          axios
-            .delete(path + "app/booking/" + bookingId, {
-              headers: {
-                token: localStorage.getItem("token"),
-              },
-            })
-            .then(function (response) {
-              console.log(response);
-              update();
+              });
+              tableBody.innerHTML = str;
             })
             .catch(function (error) {
               console.log(error);
             });
-        }
-      };
+        };
+        update();
+        const onCancel = (index) => {
+          let choice = confirm("Are You sure you want to cancel the booking ?");
+          if (choice) {
+            const bookingId = bookings[index].booking_id;
+            axios
+              .delete(path + "app/booking/" + bookingId, {
+                headers: {
+                  token: localStorage.getItem("token"),
+                },
+              })
+              .then(function (response) {
+                console.log(response);
+                update();
+              })
+              .catch(function (error) {
+                console.log(error);
+              });
+          }
+        };
+      }
+      else{
+        document.getElementsByClassName("table")[0].style.display = "none"
+      }
     </script>
   </body>
 </html>
